--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@prisma/client": "^5.7.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "normalize-email": "^1.1.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
