feat: implement and apply types to identifiers

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
       "app/*": ["./src/app/*"],
       "libs/*": ["./src/libs/*"],
       "domain/*": ["./src/domain/*"],
-      "enums/*": ["./src/enums/*"]
+      "enums/*": ["./src/enums/*"],
+      "types/*": ["./src/types/*"]
     }
   }
 }
