--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
       "libs/*": ["./src/libs/*"],
       "domain/*": ["./src/domain/*"],
       "enums/*": ["./src/enums/*"],
-      "types/*": ["./src/types/*"]
+      "types/*": ["./src/types/*"],
+      "decorators/*": ["./src/decorators/*"]
     }
   }
 }
